--- a/v_root.html
+++ b/v_root.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>x_git_graph_viewer</title>
 
+  <script src="/js_ext/jquery.js"></script>
   <script src="/js/app.js"></script>
 </head>
 
